# gwi-challenge

./: README.md  docker-compose.yml  pyproject.toml  start.sh
dinopedia/dinopedia/: settings.py  urls.py
dinopedia/dinosaurs/: admin.py  models.py  serializers.py  urls.py  views.py
dinopedia/dinosaurs/migrations/: 0001_initial.py  0002_remove_favourite_dinosaurs_dinosaur_favourites.py  0003_remove_dinosaur_favourites_dinosaur_favourite.py  0004_alter_dinosaur_favourite.py
dinopedia/dinosaurs/tests/: test.py
